--- a/index.html
+++ b/index.html
@@ -3,40 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Esai Gamboa</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Esai's Printing Services</title>
     <style>
         body {
-            animation: fadeIn 1s ease-in-out;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            background-color: #f4f4f4;
         }
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 20px;
+            font-size: 24px;
+        }
+        section {
+            padding: 20px;
+        }
+        .service-card {
+            background: white;
+            padding: 15px;
+            margin: 15px auto;
+            max-width: 400px;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
+        }
+        .cta {
+            display: inline-block;
+            background: #28a745;
+            color: white;
+            padding: 10px 20px;
+            margin-top: 20px;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+        .cta:hover {
+            background: #218838;
+        }
+        footer {
+            background-color: #222;
+            color: white;
+            padding: 10px;
+            margin-top: 20px;
         }
     </style>
 </head>
-<body class="bg-gradient-to-r from-gray-900 to-gray-700 text-white min-h-screen flex flex-col items-center justify-center">
-    
-    <div class="text-center">
-        <h1 class="text-5xl font-bold animate-pulse">Welcome to Esai Gamboa's Page</h1>
-        <p class="mt-4 text-lg opacity-80">Creating, innovating, and inspiring.</p>
+<body>
+
+    <header>
+        Esai's Printing Services
+    </header>
+
+    <section>
+        <h2>Quality Printing for Every Need</h2>
+        <p>From business cards to banners, we print it all!</p>
         
-        <div class="mt-6">
-            <button id="magicBtn" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full transition duration-300">
-                Click for Magic ✨
-            </button>
+        <div class="service-card">
+            <h3>Business Cards</h3>
+            <p>High-quality, custom business cards to leave a lasting impression.</p>
         </div>
-    </div>
 
-    <div id="magicBox" class="mt-6 hidden">
-        <p class="text-lg">Hello, visitor! You discovered something special. 🚀</p>
-    </div>
+        <div class="service-card">
+            <h3>Banners & Posters</h3>
+            <p>Large format prints for advertising, events, and promotions.</p>
+        </div>
 
-    <script>
-        document.getElementById("magicBtn").addEventListener("click", function() {
-            document.getElementById("magicBox").classList.toggle("hidden");
-        });
-    </script>
+        <div class="service-card">
+            <h3>Custom T-Shirts</h3>
+            <p>Personalized apparel printing for businesses and personal use.</p>
+        </div>
+
+        <a href="mailto:contact@esaisprinting.com" class="cta">Get a Quote</a>
+    </section>
+
+    <footer>
+        © 2025 Esai's Printing Services | Designed by 3dvr.tech
+    </footer>
 
 </body>
 </html>
