--- a/index.html
+++ b/index.html
@@ -3,61 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Esai's Printing Services</title>
+    <title>Esai Gamboa's Printing Services</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
             text-align: center;
-            background-color: #f4f4f4;
+            background-color: #f0f8ff;
+            color: #333;
         }
         header {
-            background-color: #333;
+            background: linear-gradient(90deg, #ff6f61, #ff914d);
             color: white;
             padding: 20px;
-            font-size: 24px;
+            font-size: 28px;
+            font-weight: bold;
         }
         section {
-            padding: 20px;
+            padding: 40px 20px;
         }
         .service-card {
             background: white;
-            padding: 15px;
-            margin: 15px auto;
-            max-width: 400px;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
-            border-radius: 10px;
+            padding: 20px;
+            margin: 20px auto;
+            max-width: 450px;
+            box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.2);
+            border-radius: 15px;
+            transition: transform 0.3s ease-in-out;
         }
-        .cta {
-            display: inline-block;
-            background: #28a745;
-            color: white;
-            padding: 10px 20px;
-            margin-top: 20px;
-            text-decoration: none;
-            border-radius: 5px;
+        .service-card:hover {
+            transform: scale(1.05);
         }
-        .cta:hover {
-            background: #218838;
+        h2 {
+            color: #ff6f61;
         }
         footer {
             background-color: #222;
             color: white;
-            padding: 10px;
-            margin-top: 20px;
+            padding: 15px;
+            font-size: 14px;
+            margin-top: 40px;
         }
     </style>
 </head>
 <body>
 
     <header>
-        Esai's Printing Services
+        Esai Gamboa's Printing Services
     </header>
 
     <section>
         <h2>Quality Printing for Every Need</h2>
-        <p>From business cards to banners, we print it all!</p>
+        <p>From business cards to banners, we print it all with precision and care!</p>
         
         <div class="service-card">
             <h3>Business Cards</h3>
@@ -73,12 +71,10 @@
             <h3>Custom T-Shirts</h3>
             <p>Personalized apparel printing for businesses and personal use.</p>
         </div>
-
-        <a href="mailto:contact@esaisprinting.com" class="cta">Get a Quote</a>
     </section>
 
     <footer>
-        © 2025 Esai's Printing Services | Designed by 3dvr.tech
+        © 2025 Esai Gamboa's Printing Services | Designed by 3dvr.tech
     </footer>
 
 </body>
