--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
             font-size: 14px;
             margin-top: 40px;
         }
+        footer a {
+            color: #ff914d;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        footer a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -74,7 +82,7 @@
     </section>
 
     <footer>
-        © 2025 Esai Gamboa's Printing Services | Designed by 3dvr.tech
+        © 2025 Esai Gamboa's Printing Services | Designed by <a href="https://3dvr.tech" target="_blank">3dvr.tech</a>
     </footer>
 
 </body>
